fix small bug on mobile view

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,7 +60,10 @@ body {
   justify-self: stretch;
   color: #11998e;
   
- 
+  @media only screen and (max-width: 35em) {
+    font-size: 5rem
+
+  }
 }
 
 .copyright {
